--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>ts-react-redux-kit</title>
+    <title>Kitchen's Descendant</title>
   </head>
   <body>
     <div id="app"></div>
