--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <title>Kitchen's Descendant</title>
   </head>
   <body>
-    <main id="app"></main>
+    <div id="app"></div>
   </body>
 </html>
